# gadmin-squid3

./: AUTHORS  Autoinstall  INSTALL  MAKE_RPM  MAKE_TGZ  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.in  configure.lineno  gadmin-squid.spec
desktop/: gadmin-squid.desktop
etc/security/console.apps/: gadmin-squid
po/: Makefile  translation_howto.sh
src/: Makefile.am  Makefile.in  activate_button_clicked.c  activate_button_clicked.h  add_standard_users.c  add_standard_users.h  add_user.c  add_user.h  allocate.c  allocate.h  apply_button_clicked.c  apply_button_clicked.h  apply_server_settings.c  apply_server_settings.h  apply_user.c  apply_user.h  chars_are_digits.c  chars_are_digits.h  clear_access_tab.c  clear_access_tab.h  clear_cache_tab.c  clear_cache_tab.h  clear_error_tab.c  clear_error_tab.h  commands.c  commands.h  commented.c  commented.h  create_access_tab.c  create_access_tab.h  create_acl_tab.c  create_acl_tab.h  create_cache_tab.c  create_cache_tab.h  create_conf_tab.c  create_conf_tab.h  create_del_system_user_question.c  create_del_system_user_question.h  create_disc_tab.c  create_disc_tab.h  (+31 more)
